--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "token": "NTM2NzcwNTkxNDQ1ODc2Nzk1.Dybj-w.TFvkmPwX7ye2pZiX-UYl3uXTJWg",
-    "tokendev": "NTM2NzcwNTkxNDQ1ODc2Nzk1.Dybj-w.TFvkmPwX7ye2pZiX-UYl3uXTJWg",
+    "token": "NTM2NzcwNTkxNDQ1ODc2Nzk1.Dyd4xg.rhTFIhlqb6NAJiik9Cg6wKPrBXs",
+    "tokendev": "NTM2NzcwNTkxNDQ1ODc2Nzk1.Dyd4xg.rhTFIhlqb6NAJiik9Cg6wKPrBXs",
     "prefix": "!"
 }
