--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "keywords": [
     "DiscordBot"
   ],
-  "author": "Sempiternal",
+  "author": "Sempiternal, MrEdinLaw, Fchen",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/semp1ternal/Putzgesellschaft/issues"
