--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "token": "NTM2NzcwNTkxNDQ1ODc2Nzk1.DyfSbw.2p3TpKeuFZ7lOeVs42yGQcY_h1c",
-    "tokendev": "NTM2NzcwNTkxNDQ1ODc2Nzk1.DyfSbw.2p3TpKeuFZ7lOeVs42yGQcY_h1c",
+    "token": "NTM2NzcwNTkxNDQ1ODc2Nzk1.Dynlow.K_3aQcreKvgL3_ayOcspowsoZWk",
+    "tokendev": "NTM2NzcwNTkxNDQ1ODc2Nzk1.Dynlow.K_3aQcreKvgL3_ayOcspowsoZWk",
     "prefix": "!"
 }
