--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "main.js",
   "dependencies": {
     "discord.js": "^11.4.2",
-    "enmap": "^4.6.6"
+    "enmap": "^4.6.6",
+    "ffbinaries": "^1.1.1",
+    "ffmpeg-binaries": "^3.2.2-3",
+    "lzma-native": "^4.0.3",
+    "opusscript": "0.0.6",
+    "ytdl-core": "^0.29.1"
   },
   "devDependencies": {},
   "scripts": {
