--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "token": "NTM2NzcwNTkxNDQ1ODc2Nzk1.Dynlow.K_3aQcreKvgL3_ayOcspowsoZWk",
-    "tokendev": "NTM2NzcwNTkxNDQ1ODc2Nzk1.Dynlow.K_3aQcreKvgL3_ayOcspowsoZWk",
+    "token": "NTM2NzcwNTkxNDQ1ODc2Nzk1.Dynlow.K_3aQcreKvgL3_ayOcspowso",
+    "tokendev": "NTM2NzcwNTkxNDQ1ODc2Nzk1.Dynlow.K_3aQcreKvgL3_ayOcspows",
     "prefix": "!"
 }
