--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "putzgesellschaft",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A DiscordBot for Putzgesellschaft",
   "main": "main.js",
   "dependencies": {
     "discord.js": "^11.4.2",
     "enmap": "^4.6.6",
     "ffbinaries": "^1.1.1",
-    "ffmpeg-binaries": "^3.2.2-3",
+    "ffmpeg": "0.0.4",
+    "ffmpeg-binaries": "^3.2.2",
     "lzma-native": "^4.0.3",
     "opusscript": "0.0.6",
     "ytdl-core": "^0.29.1"
